--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>PawanRaturi.com</title>
+    <link rel="shortcut icon" type="image/png" href="images/fevicon.png.png">
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
-  <body>
+
+  <body >
 
     <img src="images\pawan.png" alt="pawan's profile picture" height="200px" width="200px">
     <h1>Pawan Raturi</h1>
-    <p>Founder and CTO of <a href="http://www.kartshub.com/">Kartshub.com</a></p>
-    <p>I am iOS and Web Developer. I love coffee and brew my own beers.</p>
+    <p class="para1">Founder and CTO of <a href="http://www.kartshub.com/">Kartshub.com</a></p>
+    <p class="para2">I am iOS and Web Developer. I love coffee and brew my own beers.</p>
     <hr>
     <h3>Books and Teaching</h3>
 
