--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body >
 
-    <img src="images\pawan.png" alt="pawan's profile picture" height="200px" width="200px">
+    <img src="\images\pawan.png" alt="pawan's profile picture" height="200px" width="200px">
     <h1>Pawan Raturi</h1>
     <p class="para1">Founder and CTO of <a href="http://www.kartshub.com/">Kartshub.com</a></p>
     <p class="para2">I am iOS and Web Developer. I love coffee and brew my own beers.</p>
